// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render authorized Header 1`] = `
<header
  className="page-header"
>
  <div
    className="logo"
  >
    <a
      className="logo__link"
    >
      <span
        className="logo__letter logo__letter--1"
      >
        W
      </span>
      <span
        className="logo__letter logo__letter--2"
      >
        T
      </span>
      <span
        className="logo__letter logo__letter--3"
      >
        W
      </span>
    </a>
  </div>
  <div
    className="user-block"
  >
    <div
      className="user-block__avatar"
    >
      <img
        alt="User avatar"
        height="63"
        src="https://4.react.pages.academyimg/1.png"
        width="63"
      />
    </div>
  </div>
</header>
`;

exports[`Render unauthorized Header 1`] = `
<header
  className="page-header"
>
  <div
    className="logo"
  >
    <a
      className="logo__link"
    >
      <span
        className="logo__letter logo__letter--1"
      >
        W
      </span>
      <span
        className="logo__letter logo__letter--2"
      >
        T
      </span>
      <span
        className="logo__letter logo__letter--3"
      >
        W
      </span>
    </a>
  </div>
  <div
    className="user-block"
  >
    <a
      className="user-block__link"
      href="sign-in"
    >
      Sign in
    </a>
  </div>
</header>
`;
